--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,11 @@ body {
     font-size: 20px;
 }
 
-.header ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -78,6 +78,7 @@ p {
     margin-left: 20px;
 }
 
+/* aside styling starts */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -136,7 +137,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* aside styling ends */
 
+/* content styling starts */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -190,6 +193,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/* content styling ends*/
 
 /* applying styles to footer */
 .footer {
